Overflow issue resolved

--- a/SPE-website/pages/static/pages/navbar.css
+++ b/SPE-website/pages/static/pages/navbar.css
@@ -370,7 +370,7 @@ body {
 
 .footer-social a:hover,
 .footer-social a:focus {
-    color: #79a05f;
+    color: white;
     border: 0;
 }
 
